--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <main>
     <!-- This will load content.md -->
-    <content src="content.md"></content>
+    <mark-down src="content.md"></mark-down>
   </main>
 
   <footer>
